BUGFIX: Remove old 200% clamp on volumes